--- a/witcher.html
+++ b/witcher.html
@@ -1,6 +1,6 @@
 <h2 id="witcher-game-series-">Witcher (Game series)</h2>
-<p><img src="/witcher_logo.png" alt="Witcher Logo">
-<img src="/cdpr_logo.jpg" alt="CDPR Logo"></p>
+<p><img src="witcher_logo.png" alt="Witcher Logo">
+<img src="cdpr_logo.jpg" alt="CDPR Logo"></p>
 <h1 id="links">Links</h1>
 <ul>
 <li><a href="https://www.gog.com/pl/game/the_witcher">Link to Witcher</a></li>
