--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h2 id="home-page">Home Page</h2>
 <p>This is a home page of a repository containing websites about certain video games.</p>
 <p>-<a href="witcher.html">Witcher (game series)</a></p>
+<p>-<a href="pubg.html"> PUBG</a></p>
 <p>Collaborators: Cichy Paweł, Luca Gorzkowski, Karol Matoga</p>
