--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 <p>This is a home page of a repository containing websites about certain video games.</p>
 <p>-<a href="witcher.html">Witcher (game series)</a></p>
 <p>-<a href="pubg.html"> PUBG</a></p>
+<p>-<a href="GhostOfTsushima.html"> Ghost Of Tsushima</a></p>
 <p>Collaborators: Cichy Paweł, Luca Gorzkowski, Karol Matoga</p>
